<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UberClone</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_fb">Sign up with FB</string>
    <string name="signup_gp">Sign up with G+</string>
    <string name="signup_name">Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">Phone number</string>
    <string name="signup_password">Password</string>
    <string name="signup_next">Next</string>
    <string name="login_fb">Log in with FB</string>
    <string name="login_gp">Log in with G+</string>
    <string name="login_login">Log in</string>
    <string name="title_section0">Home</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Payment</string>
    <string name="title_section3">Promotions</string>
    <string name="title_section4">Share</string>
    <string name="title_section5">Support</string>
    <string name="title_section6">About</string>
    <string name="home_pickup_title">Select pick up location</string>
    <string name="request_uber">Request Uber</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="profile_account_title">Account</string>
    <string name="profile_account_name">David</string>
    <string name="profile_account_lastName">Zhou</string>
    <string name="profile_account_email">zhoudic@hotmail.com</string>
    <string name="profile_account_phoneNumber">+52 686 158 2192</string>
    <string name="profile_account_places">Places</string>
    <string name="profile_account_home">Add Home</string>
    <string name="profile_account_work">Add Work</string>
    <string name="profile_logOut">Log Out</string>
    <string name="remove_home_button">Remove Home</string>
    <string name="remove_work_button">Remove Work</string>
    <string name="promotion_code_hint">Enter promotion code</string>
    <string name="promotion_button_apply">Apply</string>
    <string name="share_googleplus">Share on G+</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="share_wa">Share on Whatsapp</string>
    <string name="share_twitter">Share on Twitter</string>
    <string name="share_title"><b>Share on your social media</b></string>
    <string name="payment_title">Your cards</string>
    <string name="payment_share">Earn free rides by refering friends <br>Code: </br></string>
    <string name="addPayment_credit_card_hint">Credit Card Number</string>
    <string name="addPayment_mm_hint">MM</string>
    <string name="addPayment_yy_hint">YY</string>
    <string name="addPayment_cvv_hint">CVV</string>
    <string name="addPayment_submit_text">ADD PAYMENT</string>
    <string name="addPayment_country_prompt">Choose your country</string>
    <string name="registerPayment_postalCode">Postal code</string>
    <string name="registerPayment_registerCard">Register card</string>
    <string name="facebook_app_id">396977273804909</string>
    <string name="ip">http://192.168.1.76:8000/</string>

    <string-array name="addPayment_countries">
        <item>Country</item>
        <item>Mexico</item>
        <item>United States</item>
        <item>Canada</item>
        <item>Spain</item>
        <item>Germany</item>
        <item>France</item>
        <item>United Kingdom</item>
        <item>Brazil</item>
        <item>Portugal</item>
        <item>China</item>
        <item>Japan</item>
        <item>Russia</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="title_activity_ride_details">RideDetailsActivity</string>

    <string name="origin_label">You went from </string>
    <string name="destination_label">to </string>
    <string name="time_label">The ride took </string>
    <string name="distance_label">You traveled </string>
    <string name="fee_label">Your fee was </string>
    <string name="final_fee_label">Adjusted fee was </string>
    <string name="rating_label">Please rate your driver</string>
    <string name="accept_ride_details_button">Accept</string>

</resources>
