<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView android:id="@+id/profile_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_title"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/profile_account_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/profile_account_title"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/profile_account_name"
        android:layout_marginRight="20dp"
        android:src="@drawable/default_avatar"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/profile_account_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_account_title"
        android:layout_alignParentRight="true"
        android:text="@string/profile_account_name"
        android:editable="false"
        android:focusable="false"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/profile_account_lastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_account_name"
        android:layout_alignParentRight="true"
        android:text="@string/profile_account_lastName"
        android:editable="false"
        android:focusable="false"/>

    <EditText
        android:id="@+id/profile_account_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_account_picture"
        android:layout_alignParentLeft="true"
        android:text="@string/profile_account_email"
        android:editable="false"
        android:focusable="false"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/profile_account_phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_account_email"
        android:layout_alignParentLeft="true"
        android:text="@string/profile_account_phoneNumber"
        android:editable="false"
        android:focusable="false"
        android:layout_marginBottom="40dp"/>

    <TextView android:id="@+id/profile_account_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_places"
        android:layout_below="@+id/profile_account_phoneNumber"
        android:layout_marginBottom="20dp"/>

    <TextView android:id="@+id/profile_account_home"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_home"
        android:layout_below="@+id/profile_account_places"
        android:drawableLeft="@drawable/home_icon"
        android:drawablePadding="20dp"
        android:layout_marginBottom="20dp"
        />

    <TextView android:id="@+id/profile_account_work"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_work"
        android:layout_below="@+id/profile_account_home"
        android:drawableLeft="@drawable/work_icon"
        android:drawablePadding="20dp"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:id="@+id/profile_logOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_logOut"
        android:layout_below="@+id/profile_account_work"/>


</RelativeLayout>